- add proactive duplicate checks in services - translate DataIntegrityViolationException to domain duplicate exceptions - add existsBy* repository methods for duplicate pre-checks - centralize duplicate->409 mapping via RestControllerAdvice